--- a/src/Web/Pages/_ViewStart.cshtml
+++ b/src/Web/Pages/_ViewStart.cshtml
@@ -1,3 +1,4 @@
 ﻿@{
-    Layout = "_Layout";
+    var routeUrl = ViewContext.RouteData.Values["Page"]?.ToString();
+    Layout = routeUrl?.StartsWith("/Admin") ?? false ? "_AdminLayout" : "_Layout";
 }
