--- a/styles/scss/abstracts/_variables.scss
+++ b/styles/scss/abstracts/_variables.scss
@@ -18,6 +18,11 @@ $color-grey-light-2: #d6d6d6;
 $color-grey-dark-1: #8c8c8c;
 $color-grey-dark-2: #545454;
 
+$color-danger: #cc3300;
+$color-warning: #ff9966;
+$color-info: #ffcc00;
+$color-success: #339900;
+
 // Font families 
 $typeface-primary: "Open Sans", sans-serif;
 
@@ -28,20 +33,20 @@ $weight-medium: 600;
 $weight-bold: 700;
 
 // Font sizes
-$size-3xs: .8rem;
-$size-2xs: 1rem;
-$size-xs: 1.2rem;
-$size-s: 1.4rem;
-$size-m: 1.6rem;
-$size-l: 1.8rem;
-$size-xl: 2rem;
-$size-2xl: 2.4rem;
-$size-3xl: 3rem;
-$size-4xl: 3.6rem;
-$size-5xl: 4.8rem;
-$size-6xl: 6rem;
-$size-7xl: 7.2rem;
-$size-8xl: 9.6rem;
+$fs-3xs: .8rem;
+$fs-2xs: 1rem;
+$fs-xs: 1.2rem;
+$fs-s: 1.4rem;
+$fs-m: 1.6rem;
+$fs-l: 1.8rem;
+$fs-xl: 2rem;
+$fs-2xl: 2.4rem;
+$fs-3xl: 3rem;
+$fs-4xl: 3.6rem;
+$fs-5xl: 4.8rem;
+$fs-6xl: 6rem;
+$fs-7xl: 7.2rem;
+$fs-8xl: 9.6rem;
 
 // Spacing
 $spacing-xs: .8rem;
