--- a/styles/scss/base/_typography.scss
+++ b/styles/scss/base/_typography.scss
@@ -3,3 +3,10 @@
 body {
     font-family: var.$typeface-primary;
 }
+
+.section-heading {
+    font-size: var.$fs-2xl;
+    font-weight: var.$weight-light;
+    margin-bottom: var.$spacing-m;
+    color: var.$color-primary-medium;
+}
