--- a/src/Web/Pages/Shared/_Layout.cshtml
+++ b/src/Web/Pages/Shared/_Layout.cshtml
@@ -1,13 +1,16 @@
-﻿<!DOCTYPE html>
+﻿@using Web.Components
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="htmx-config" includeAntiForgeryToken="true"/>
     <link rel="shortcut icon" type="image/png" href="~/img/favicon.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800"/>
     <link rel="stylesheet" href="~/css/dev/main.css"/>
     @await RenderSectionAsync("StyleSheets", required: false)
     <script src="~/js/components.js"></script>
+    <script src="~/js/main.js"></script>
     <title>Sun Rays Market | @ViewData["Title"]</title>
 </head>
 <body>
@@ -35,7 +38,7 @@
                     <svg class="store__icon">
                         <use href="/img/icons/solid.svg#store"></use>
                     </svg>
-                    
+
                     <h6 class="store__heading">
                         Your Store
                     </h6>
@@ -72,29 +75,13 @@
                     <a href="#" class="nav__link">Meat</a>
                 </li>
             </ul>
-            <div class="nav__account">
-                <a class="nav__account-link"
-                    hx-get="/components/sign-up"
-                    hx-target="#modalOutlet"
-                    hx-swap="innerHTML"
-                    >
-                    <svg class="nav__account-icon">
-                        <use href="/img/icons/solid.svg#user-plus"></use>
-                    </svg>
-                    <span>Sign Up</span>
-                </a>
 
-                <a class="nav__account-link"
-                   hx-get="/components/login"
-                   hx-target="#modalOutlet"
-                   hx-swap="innerHTML"
-                   >
-                    <svg class="nav__account-icon">
-                        <use href="/img/icons/solid.svg#right-to-bracket"></use>
-                    </svg>
-                    <span>Login</span>
-                </a>
-            </div>
+            <component
+                type="typeof(NavAccount)"
+                param-IsAuthenticated="@(Context.User.Identity is not null && Context.User.Identity.IsAuthenticated)"
+                render-mode="Static"
+                />
+
         </div>
     </nav>
     <div class="layout layout--page @ViewData["LayoutClasses"]">
@@ -103,7 +90,7 @@
         @if ((bool)(ViewData["ShowFooter"] ?? true))
         {
             <footer class="footer">
-                
+
             </footer>
         }
     </div>
@@ -112,6 +99,11 @@
 <div id="modalOutlet"></div>
 
 <script src="~/lib/htmx/htmx.min.js"></script>
+<script> 
+initializeHtmx();
+initializeMutationObservers();
+</script>
+
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
