--- a/src/Web/Pages/Shared/_AdminLayout.cshtml
+++ b/src/Web/Pages/Shared/_AdminLayout.cshtml
@@ -21,6 +21,9 @@
                 <a href="/Admin/Cart" class="admin-sidebar__link">Carts</a>
             </li>
             <li class="admin-sidebar__item">
+                <a href="/Admin/Department" class="admin-sidebar__link">Departments</a>
+            </li>
+            <li class="admin-sidebar__item">
                 <a href="/Admin/Order" class="admin-sidebar__link">Orders</a>
             </li>
             <li class="admin-sidebar__item">
