Converted cart controls to interactive Blazor components.

--- a/src/WebBlazor/Components/Pages/ShoppingCart.razor
+++ b/src/WebBlazor/Components/Pages/ShoppingCart.razor
@@ -3,7 +3,7 @@
 @using Application.UnitOfWork
 @using Application.Services
 @using Application.Utilities
-@using Web.Cookies
+@using Application.Cookies
 @inherits OwningComponentBase<IUnitOfWork>
 
 <main class="layout layout__full">
