--- a/src/WebBlazor/Components/_Imports.razor
+++ b/src/WebBlazor/Components/_Imports.razor
@@ -9,6 +9,6 @@
 @using Microsoft.JSInterop
 @using WebBlazor
 @using WebBlazor.Components
-@using WebBlazor.Components.Dynamic
 @using WebBlazor.Components.Shared
 @using WebBlazor.Components.Static
+@using WebClient.Components
