--- a/src/WebBlazor/Components/Static/ProductSection.razor
+++ b/src/WebBlazor/Components/Static/ProductSection.razor
@@ -2,8 +2,8 @@
 @using Application.Services
 @using Application.UnitOfWork
 @using Application.Utilities
+@using Application.Cookies
 @inherits OwningComponentBase<IUnitOfWork>
-@using Web.Cookies
 
 <section class="section">
     <h3 class="section-heading">@Heading</h3>
