Changed the name of ICartControlsSerivce to ICartService.

--- a/src/WebClient/Components/CartControls.razor
+++ b/src/WebClient/Components/CartControls.razor
@@ -3,7 +3,7 @@
 @using Application.DomainModels
 @using Application.EndpointViewModels
 @using Microsoft.AspNetCore.Http
-@inherits OwningComponentBase<ICartControlsService>
+@inherits OwningComponentBase<ICartService>
 @rendermode InteractiveAuto
 
 <div class="@CssClasses"
